
syntax = "proto3";

package api.rule;

option go_package = "github.com/tkeel-io/rule-manager/api/rule/v1;v1";
option java_multiple_files = true;
option java_package = "api.rule";

message String {
  string value = 1;
}

message Uint64 {
  uint64 value = 1;
}

message Uint32 {
  uint32 value = 1;
}

message Int32 {
  int32 value = 1;
}

message Float {
  float value = 1;
}

message Bool {
  bool value = 1;
}

message Pager {
  Int32 limit = 1;
  Int32 offset = 2;
  String sort_key = 3;
  Bool Reverse = 4;
}
